--- a/YuantaMVC/appsettings.json
+++ b/YuantaMVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AzureDB": ""
+    "DefaultConnection": "Server=.;Database=YTAMVC;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
   },
   "Logging": {
     "LogLevel": {
